--- a/style.css
+++ b/style.css
@@ -145,3 +145,68 @@ fieldset{
 legend{
 	display: none;
 }
+@media screen and (max-width: 400px){
+	*{
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		max-width: 240px;
+	}
+	body{
+		background: #f4f2ec url(imagens/fundo.png) repeat-x;
+		background-size: 110px;		
+		font: 10px "Lucida Grande", "Lucida Sans Unicode", Arial, sans-serif;	
+	}
+	header{
+		height: 215px;
+	}
+	#container{
+		width: 270px;
+		margin: 0 auto;
+	}
+	#logo a{
+		width: 290px;
+		height: 21px;
+		text-indent: -9999px;
+		display: block;
+		background: url(imagens/logo.png) no-repeat;
+		margin: 0;
+		padding: 0;
+	}	
+	/***************** Barra de Navegação ****************/
+	nav {
+		height: 190px;
+		width: 300px;
+	}
+	nav ul{	
+		margin-top: 0;
+	}
+	nav ul li{	
+		padding: 0;	
+	}
+	
+	/***************** Principal ****************/
+	aside{
+		width: 100%;
+		padding-left: 30px;
+	}
+	#capa {
+		margin-left: 20px;
+	}
+	#exposicoes {
+		padding-left: 20px;
+	}	
+	/***************** Rodapé ****************/
+	footer{
+		clear: both;
+		padding-left: 20px;
+		text-align: left;
+		background: url(imagens/fundo-rodape.png) no-repeat center top;
+	}
+	footer>p a{
+		padding: 2px 10px;
+	}
+	.copyright {
+		padding: 10px;
+	}
+}
