--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ legend{
 		margin-top: 0;
 	}
 	nav ul li{	
-		padding: 0;	
+		padding: 20px;	
 	}
 	
 	/***************** Principal ****************/
